@@ -17,6 +17,11 @@
     Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
 
+#ifdef HAVE_LIBZ
+#include <zlib.h>
+#endif
+#include <string.h>
+
 #include "types.h"
 
 #define ROMREADER_DEFAULT -1
